--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,4 +31,5 @@ dependencies {
     implementation 'com.google.android.material:material:1.0.0'
     //noinspection GradleCompatible
     implementation 'com.android.support:gridlayout-v7:28.0.0-alpha3'
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0'
 }
